Using jeet as grid system

--- a/app/home/Home.styl
+++ b/app/home/Home.styl
@@ -1,6 +1,7 @@
+@import 'jeet'
+
 :local .container
-  margin 0 auto
-  max-width 960px
+  center 960px
   
 :local .hero
   text-transform uppercase
